--- a/ngh --dir dist/book-my-hall/index.html
+++ b/ngh --dir dist/book-my-hall/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>BookMyHall</title>
-  <base href="https://ajith6201.github.io/book-my-hall/">
+  <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.4cc4ca9cdf2786141d89.css"></head>
+</head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.20ab2d163684112c2aba.js"></script><script type="text/javascript" src="scripts.7bae23f8e8303d65b966.js"></script><script type="text/javascript" src="main.5b7c5ba08ed6bc03c804.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
